<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/nametxt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/textView"
            android:gravity="center_vertical"
            android:textColor="#0048FF"
            android:text="@string/name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtName"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/stargazers_counttxt"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/txtStargazers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtName"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#0048FF"
            android:gravity="center_vertical"
            android:text="@string/stargazers_count"
            android:textSize="20sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
